Clear out |mElementFrame| when popup goes away so that subsequent reflows won't try to access it. Fixes crash with tooltip on a tree when app is minimized then restored (bug 38872)